<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/datePublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_margin="4dp"
        android:textSize="12sp"
        android:text="@string/date_publish"
        app:layout_constraintStart_toStartOf="@+id/tvUsername"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <ImageView
        android:id="@+id/storyImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/story_image"
        app:layout_constraintStart_toStartOf="@+id/datePublish"
        app:layout_constraintTop_toBottomOf="@+id/datePublish"
        tools:src="@tools:sample/avatars" />


</androidx.constraintlayout.widget.ConstraintLayout>